--- a/spring-security/src/main/resources/application.properties
+++ b/spring-security/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=4572
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+server.servlet.session.timeout=90m
